<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title_latest"
            android:text="@string/title_latest"
            android:layout_width="match_parent"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="@dimen/size_title_home_movies"
            android:layout_height="38dp"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.example.themoviedb.ui.widget.ImageInfoList
            android:id="@+id/latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/now_playing"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="@dimen/size_title_home_movies"
            android:layout_height="38dp"
            android:id="@+id/title_now_playing"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.example.themoviedb.ui.widget.ImageInfoList
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/popular"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="@dimen/size_title_home_movies"
            android:layout_height="38dp"
            android:id="@+id/title_popular"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.example.themoviedb.ui.widget.ImageInfoList
            android:id="@+id/popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/top_rated"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="@dimen/size_title_home_movies"
            android:layout_height="38dp"
            android:id="@+id/title_top_rated"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.example.themoviedb.ui.widget.ImageInfoList
            android:id="@+id/top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/upcoming"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="@dimen/size_title_home_movies"
            android:layout_height="38dp"
            android:id="@+id/title_upcoming"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.example.themoviedb.ui.widget.ImageInfoList
            android:id="@+id/upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>